Fix unit table overspill

--- a/src/pages/Models/Details/_model-details.scss
+++ b/src/pages/Models/Details/_model-details.scss
@@ -39,7 +39,7 @@
   }
 
   .model-details__units tr {
-    grid-template-columns: 20% 13% 9% 9% 16.5% 5% 30%;
+    grid-template-columns: 20% 13% 9% 9% 14% 5% 30%;
   }
 
   .model-details__machines tr {
